[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version    = "1.2.0"
authors    = ["larry <gm@larry.engineer>"]
edition    = "2021"
homepage   = "https://badges.fun"
repository = "https://github.com/steak-enjoyers/badges"
license    = "GPL-3.0-or-later"
keywords   = ["nft", "cosmos", "cosmwasm", "stargaze"]

[workspace.dependencies]
cosmwasm-schema = "1.0"
cosmwasm-std    = "1.0"
cw2             = "0.13"
cw721           = "0.13"
cw721-base      = "0.13"
cw-item-set     = "0.4"
cw-storage-plus = "0.13"
cw-utils        = "0.13"
hex             = "0.4"
k256            = "0.10"
schemars        = "0.8"
serde           = { version = "1.0", default-features = false }
sg1             = "0.14"
sg721           = "0.14"
# Stargaze team forgot to upload sg721-base v0.14 to crates.io
sg721-base      = { git = "https://github.com/public-awesome/launchpad", rev = "4183957" }
sg-metadata     = "0.14"
sg-std          = "0.14"
sha2            = "0.10"
thiserror       = "1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
