[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version    = "1.2.0"
authors    = ["larry <gm@larry.engineer>"]
edition    = "2021"
homepage   = "https://badges.fun"
repository = "https://github.com/steak-enjoyers/badges"
license    = "GPL-3.0-or-later"
keywords   = ["nft", "cosmos", "cosmwasm", "stargaze"]

[workspace.dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std    = "1.1"
cw2             = "0.16"
cw721           = "0.16"
cw721-base      = "0.16"
cw-item-set     = { version = "0.7", default-features = false, features = ["iterator"] }
cw-storage-plus = "1.0"
# we can't use cw-utils v1.0 because sg1 still uses 0.16
cw-utils        = "0.16"
hex             = "0.4"
schemars        = "0.8"
serde           = { version = "1.0", default-features = false }
sg1             = "0.21"
sg721           = "0.21"
sg721-base      = "0.21"
sg-metadata     = "0.21"
sg-std          = "0.21"
sha2            = "0.10"
thiserror       = "1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
