[package]
name        = "badge-hub"
description = "Badge Hub contract is where event organizers create, mint, or edit badges."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
badges          = { path = "../../packages/badges" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-item-set     = "0.4"
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
hex             = "0.4"
serde           = { workspace = true }
sg1             = { workspace = true }
sg721           = { workspace = true }
sg-metadata     = { workspace = true }
sg-std          = { workspace = true }
sha2            = "0.10"
thiserror       = "1"

[dev-dependencies]
k256 = "0.10"
rand = "0.8"
