[package]
name        = "badge-hub"
description = "Badge Hub contract is where event organizers create, mint, or edit badges."
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
default = ["v1_2"]
library = []
v1_1 = []
v1_2 = []

[dependencies]
badges          = { path = "../../packages/badges" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-item-set     = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
hex             = { workspace = true }
serde           = { workspace = true }
sg1             = { workspace = true }
sg721           = { workspace = true }
sg-metadata     = { workspace = true }
sg-std          = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
k256 = "0.11"
rand = "0.8"
