[package]
name = "badge-nft"
version = "1.0.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2021"

[features]
library = []

[dependencies]
badges = { path = "../../packages/badges" }
cosmwasm-std = "1.0"
cw2 = "0.13"
cw721 = "0.13"
cw-storage-plus = "0.13"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sg721 = "0.14"
# TODO: update to once tagged and uploaded to crates.op
sg721-base = { git = "https://github.com/public-awesome/launchpad", rev = "c5280ef" }
# TODO: update to once tagged and uploaded to crates.op
sg-metadata = { git = "https://github.com/public-awesome/launchpad", rev = "c5280ef" }
sg-std = "0.14"
thiserror = "1"
