[package]
name        = "badge-nft"
version     = "1.0.0"
authors     = ["larry <gm@larry.engineer>"]
edition     = "2021"
description = "Badge NFT is the implementation of SG-721 contract for the Badges project"
readme      = "README.md"
homepage    = "https://larry.engineer"
repository  = "https://github.com/st4k3h0us3/badges"
license     = "GPL-3.0-or-later"
keywords    = ["nft", "cosmos", "cosmwasm", "stargaze"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []

[dependencies]
badges = { path = "../../packages/badges" }
cosmwasm-std = "1.0"
cw-storage-plus = "0.13"
cw2 = "0.13"
cw721 = "0.13"
sg721 = "0.14"
# TODO: update once published on crates.io
sg721-base = { git = "https://github.com/public-awesome/launchpad", rev = "4183957" }
# TODO: update once published on crates.io
sg-metadata = { git = "https://github.com/public-awesome/launchpad", rev = "4183957" }
sg-std = "0.14"

[dev-dependencies]
cosmwasm-schema = "1.0"
cw721-base = "0.13"
