[package]
name = "trophy-hub"
version = "0.3.0"
authors = ["larry_0x <larry@protonmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
terra-trophies = { version = "0.3.0", path = "../../packages/terra-trophies" }

cosmwasm-std = "=0.16.0"
cw721 = "=0.9.2"
cw-storage-plus = "=0.9.1"

sha2 = "0.9"
base64 = "0.13.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "=0.16.0"
rand = "0.8.4"
k256 = { version = "0.9.6", features = ["ecdsa"] }