[package]
name        = "badge-nft"
description = "Badge NFT is the implementation of SG-721 contract for the Badges project"
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
library = []

[dependencies]
badges          = { path = "../../packages/badges" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
sg721           = { workspace = true }
sg721-base      = { workspace = true, features = ["library"] }
sg-metadata     = { workspace = true }
sg-std          = { workspace = true }

[dev-dependencies]
cw721-base = { workspace = true }
